# SiktirGitDPI

./: LICENSE  README.md
SiktirGitDPI/: CMakeLists.txt
SiktirGitDPI/include/: sgd_config.hpp  sgd_core.hpp  sgd_engine.hpp  sgd_http.hpp  sgd_tls.hpp
SiktirGitDPI/src/: dns_handler.cpp  http_parser.cpp
include/: sgd_dns.hpp  sgd_utils.hpp
src/: engine.cpp  main.cpp  tls_parser.cpp  utils.cpp
